Updated atlantic_footer template to use asset map link and catalogue production link. Is there a French version...

--- a/ckanext/cioos_theme/templates/atlantic_footer.html
+++ b/ckanext/cioos_theme/templates/atlantic_footer.html
@@ -38,8 +38,8 @@
 			</div>
 			<div id="footer-col3" class="widget-area one_sixth"><aside class="widget_text widget widget_custom_html">
 			<h3 class="footer-widget-title"><span>DATA</span></h3>
-			<div class="textwidget custom-html-widget"><a href="https://catalogue.dev.cioosatlantic.ca">Catalogue</a><br>
-			<a href="https://dev.cioosatlantic.ca/">Asset Map</a></div></aside>
+			<div class="textwidget custom-html-widget"><a href="https://catalogue.cioosatlantic.ca">Catalogue</a><br>
+			<a href="https://assetmap.cioosatlantic.ca/">Asset Map</a></div></aside>
 			</div>
 
 			<div id="footer-col4" class="widget-area last one_half">
@@ -76,3 +76,4 @@
 			</div>
   {% endblock %}
 {% endmacro %}
+
