--- a/ckanext/cioos_theme/templates/atlantic_footer.html
+++ b/ckanext/cioos_theme/templates/atlantic_footer.html
@@ -1,27 +1,40 @@
 {% macro include_site_footer() %}
   {% block footer_core %}
-			<div id="footer-col1" class="widget-area one_sixth">
+			<div id="footer-col1" class="widget-area">
 				<aside class="widget_text widget widget_custom_html">
 					<h3 class="footer-widget-title">
+                        {%- if h.lang() == 'en' -%}
 						<span>CONTACT US</span>
+                        {%- else -%}
+                        <span>CONTACTEZ-NOUS</span>
+                        {%- endif -%}
 					</h3>
 					<div class="textwidget custom-html-widget">
 						<a href="https://twitter.com/cioos_siooc">Twitter</a><br>
 						<a href="https://www.linkedin.com/company/cioosatlantic/">LinkedIn</a><br>
+                        {%- if h.lang() == 'en' -%}
 						<a href="mailto:info@cioosatlantic.ca">Contact Us</a><br>
+                        {%- else -%}
+                        <a href="mailto:info@cioosatlantic.ca">Contactez-Nous</a><br>
+                        {%- endif -%}
 					</div>
 				</aside>
 			</div>
 
-			<div id="footer-col2" class="widget-area one_sixth">
+			<div id="footer-col2" class="widget-area">
 				<aside class="widget widget_text">
 					<h3 class="footer-widget-title">
+                        {%- if h.lang() == 'en' -%}
 						<span>CIOOS</span>
+                        {%- else -%}
+                        <span>SIOOC</span>
+                        {%- endif -%}
 					</h3>
 					<div class="textwidget">
 						<div class="widget-area width_auto">
 							<aside class="widget_text widget widget_custom_html">
-								<div>
+								{%- if h.lang() == 'en' -%}
+                                <div>
 									<a href="https://www.cioos.ca/">CIOOS National</a>
 								</div>
 								<div class="textwidget custom-html-widget">
@@ -29,45 +42,76 @@
 									<br>
 									<a href="https://ogsl.ca/en/">St. Lawrence Region</a>
 									<br>
-									<a href="https://cioosatlantic.ca">Atlantic Region</a>
+									<a href="{{ g.site_home_url }}">Atlantic Region</a>
 								</div>
+                                {%- else -%}
+                                <div>
+									<a href="https://cioos.ca/fr/accueil/">SIOOC National</a>
+								</div>
+								<div class="textwidget custom-html-widget">
+									<a href="https://cioospacific.ca/fr/accuiel/">Région Pacifique</a>
+									<br>
+									<a href="https://slgo.ca/fr/accueil/">Région Saint-Laurent</a>
+									<br>
+									<a href="{{ g.site_home_url }}fr/">Région Atlantique</a>
+								</div>
+                                {%- endif -%}
 							</aside>
 						</div>
 					</div>
 				</aside>
 			</div>
-			<div id="footer-col3" class="widget-area one_sixth"><aside class="widget_text widget widget_custom_html">
+			<div id="footer-col3" class="widget-area col"><aside class="widget_text widget widget_custom_html">
+            {%- if h.lang() == 'en' -%}
 			<h3 class="footer-widget-title"><span>DATA</span></h3>
-			<div class="textwidget custom-html-widget"><a href="https://catalogue.dev.cioosatlantic.ca">Catalogue</a><br>
-			<a href="https://dev.cioosatlantic.ca/">Asset Map</a></div></aside>
+			<div class="textwidget custom-html-widget"><a href="{{ h.url_for('home.index') }}">Catalogue</a><br>
+			<a href="https://assetmap.cioosatlantic.ca/">Asset Map</a></div></aside>
 			</div>
+            {%- else -%}
+            <h3 class="footer-widget-title"><span>DONNÉES</span></h3>
+			<div class="textwidget custom-html-widget"><a href="{{ h.url_for('home.index') }}">Catalogue</a><br>
+			<a href="https://assetmap.cioosatlantic.ca/?lg=fr">Carte des Actifs</a></div></aside>
+			</div>
+            {%- endif -%}
 
-			<div id="footer-col4" class="widget-area last one_half">
+			<div id="footer-col4" class="widget-area col">
 				<aside class="widget_text widget widget_custom_html">
 					<h3 class="footer-widget-title">
-						<span>SUBSCRIBE TO CIOOS VIA EMAIL</span>
+                        {%- if h.lang() == 'en' -%}
+						<span>Subscribe to our Newsletter</span>
+                        {%- else -%}
+                        <span>Abonnez-Vous À Siooc Atlantique</span>
+                        {%- endif -%}
 					</h3>
 					<div class="textwidget custom-html-widget">
 						<!-- Begin Mailchimp Signup Form -->
 						<div id="mc_embed_signup">
     							<form action="https://cioosatlantic.us19.list-manage.com/subscribe/post?u=70e43ded9ed1212de9f9d02fc&amp;id=b6549cddce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        							<div class="mc-input-fields">
-            								<div class="mc-field-group">
-                								<label for="mce-FNAME">First Name</label>
-                								<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-            								</div>
-            							<div class="mc-field-group">
-                							<label for="mce-EMAIL">Email Address <span class="mc-required">(required)</span></label>
-                							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            							</div>
-        						</div>
+
+                                                        {%- if h.lang() == 'en' -%}
+                                                        <input id="mce-FNAME" class="newsletter-field" name="FNAME" type="text" value="" placeholder="First name">
+                                                        <br>
+                                                        <input id="mce-EMAIL" class="required email newsletter-field" name="EMAIL" type="email" value="" placeholder="Email address">
+                                                        {%- else -%}
+                                                        <input id="mce-FNAME" class="newsletter-field" name="FNAME" type="text" value="" placeholder="Prénom">
+                                                        <br>
+                                                        <input id="mce-EMAIL" class="required email newsletter-field" name="EMAIL" type="email" value="" placeholder="Courriel">
+                                                        {%- endif -%}
+                                                        <p></p>
+
         						<div id="mce-responses" class="clear">
             							<div class="response" id="mce-error-response" style="display:none"></div>
             							<div class="response" id="mce-success-response" style="display:none"></div>
         						</div>
         						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_70e43ded9ed1212de9f9d02fc_b6549cddce" tabindex="-1" value=""></div>
+
+                                {%- if h.lang() == 'en' -%}
         						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                {%- else -%}
+                                <input type="submit" value="Soumettre" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                {%- endif -%}
+
     							</form>
 						</div>
 						<!--End mc_embed_signup-->
