--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -1,11 +1,12 @@
-{% block header_wrapper %} 
+{% block header_wrapper %}
 <header class="navbar navbar-static-top masthead">
   {% block header_debug %} {% if g.debug and not g.debug_supress_header %}
   <div class="debug">Controller : {{ c.controller }}<br/>Action : {{ c.action }}</div>
   {% endif %} {% endblock %}
   <div class="container">
     <div class="navbar-right">
-      <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+      <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggle collapsed" type="button" aria-label="expand or collapse" aria-expanded="false">
+        <span class="sr-only">{{ _('Toggle navigation') }}</span>
         <span class="fa fa-bars"></span>
       </button>
     </div>
@@ -24,12 +25,17 @@
       {% block header_site_navigation %}
       <nav class="section navigation">
         <ul class="nav nav-pills">
-          {% block header_site_navigation_tabs %} {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
-          ('group_index', _('Groups')), ('home.about', _('About')) ) }} {% endblock %}
+          {% block header_site_navigation_tabs %}
+          {{ h.build_nav_main(
+          ('dataset.search', _('Datasets')),
+          ('organization.index', _('Organizations')),
+          ('group.index', _('Groups')),
+          ('home.about', _('About')) ) }}
+          {% endblock %}
         </ul>
       </nav>
       {% endblock %} {% block header_site_search %}
-      <form class="section site-search simple-input" action="{% url_for controller='package', action='search' %}" method="get">
+      <form class="section site-search simple-input" action="{% url_for 'dataset.search' %}" method="get">
         <div class="field">
           <label for="field-sitewide-search">{% block header_site_search_label %}{{ _('Search Datasets') }}{% endblock %}</label>
           <input id="field-sitewide-search" type="text" class="form-control" name="q" placeholder="{{ _('Search') }}" />
