--- a/ckanext/cioos_theme/templates/organization/snippets/organization_item.html
+++ b/ckanext/cioos_theme/templates/organization/snippets/organization_item.html
@@ -11,7 +11,7 @@ Example:
       {% endfor %}
     </ul>
 #}
-{% set url = h.url_for(organization.type ~ '.read', action='read', id=organization.name) %}
+{% set url = h.url_for(organization.type ~ '.read', id=organization.name) %}
 {% block item %}
 <li class="media-item">
   {% block item_inner %}
@@ -23,7 +23,7 @@ Example:
   {% endblock %}
   {% block description %}
     {% if h.get_translated(organization, 'description') %}
-      <p>{{ h.markdown_extract(h.get_translated(organization, 'description'), extract_length=80) }}</p>
+      <p  class="media-description">{{ h.markdown_extract(h.get_translated(organization, 'description'), extract_length=80) }}</p>
     {% endif %}
   {% endblock %}
   {% block datasets %}
